@@ -1,3 +1,9 @@
+2001-03-27  Larry Ewing  <lewing@ximian.com>
+
+	* htmliframe.c (destroy): disconnect the signals from the html
+	widget that refer to the iframe since the iframe_created.
+	(html_iframe_class_init): use the new destroy handler.
+
 2001-03-26  Larry Ewing  <lewing@ximian.com>
 
 	* keybindingsrc.emacs: disable autofill.
